# cs-ahocv-jaguar-reid

./: .gitignore  EDA_EXPERIMENTS.md  Experiments.md  LEADERBOARD_EXPERIMENTS.md  README.md  experiments.md  pyproject.toml  submission.csv
exploratory_data_analysis/: cluserting.ipynb  eda_experiments.md  overview.ipynb
jaguar/: baseline_refined.py  components.py  criteria.py  datasets.py  embedding_models.py  models.py  submission.py  train.py  validation.py
jaguar/experiments/: 00_baseline.py  00_final.py  00a_identity_distribution_quality.ipynb  00b_backbone_embeddings.ipynb  01_embedding_model.py  02_backbone.py  02_loss_functions.py  03_loss_functions.py  05_gem_pooling.py  06_embedding_projection.py  07_Backbone_FT.py  07_progressive_resizing.py  09_augmentation.py  09c_background_interventions.py  10_QE_RR.py  13_optimizer.py  14_LR_scheduler.py  42_curated_dataset.ipynb  _final.py  _test.py  baba.py  eda02_background_interventions.py  eda04_curated.ipynb  eda04_duplicates.ipynb  final-final.py  hyp.py  lbe01_multiple_backbones.py  lbe02_backbone_pooling.py  lbe03_projection_head_architecture.py  lbe04a_augmentation_frozen.py  lbe04b_augmentation_trainable.py  lbe05_spheres.py  lbe06a_loss_functions.py  lbe06b_class_balanced_loss_functions.py  lbe08_optimizer.py  lbe09_lr_scheduler.py  (+3 more)
scripts/: 09a_augmentation_frozen.sh  09b_augmentation_trainable.sh  09c_background_interventions.sh  eda02_background_interventions.sh  hyp.sh  lbe04a_augmentation_frozen.sh  lbe04b_augmentation_trainable.sh  lbe10_hyperparameter_search copy.sh  lbe11_stability.sh
(+1 files in other folders)
